# makepad-component

./: .gitignore  README.md  serve_wasm.py
crates/a2ui-demo/: Cargo.toml
crates/a2ui-demo/src/: app.rs  kimi_bridge.rs
crates/component-zoo/: Cargo.toml
crates/component-zoo/src/: app.rs
crates/ui/src/a2ui/: host.rs  sse.rs  surface.rs
crates/ui/src/widgets/: badge.rs  button.rs  input.rs  mod.rs  popover.rs  tooltip.rs
docs/: splash-investor-pitch-zh.md  splash-investor-pitch.md
remotion-splash-pitch/: generate_ppt.py  generate_ppt_light.py  package-lock.json  package.json  splash-pitch-light.pptx  splash-pitch-slide.html  splash-pitch.pptx
remotion-splash-pitch/src/: Root.tsx  SplashPitch.tsx  styles.ts
remotion-splash-pitch/src/scenes/: ArchitectureScene.tsx  CTAScene.tsx  DemoScene.tsx  MarketScene.tsx  TechScene.tsx  TitleScene.tsx  VisionScene.tsx
skills/makepad-screenshot/: SKILL.md
