[package]
name = "a2ui-demo"
version.workspace = true
edition.workspace = true
description = "A2UI protocol demo for Makepad"

[[bin]]
name = "a2ui-demo"
path = "src/main.rs"

[[bin]]
name = "a2ui-streaming"
path = "src/streaming_main.rs"

[[bin]]
name = "mock-a2a-server"
path = "src/mock_server.rs"
required-features = ["mock-server"]

[[bin]]
name = "watch-server"
path = "src/watch_server.rs"
required-features = ["mock-server"]

[[bin]]
name = "kimi-bridge"
path = "src/kimi_bridge.rs"
required-features = ["kimi-bridge"]

[dependencies]
makepad-component = { workspace = true }
makepad-widgets = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Mock server dependencies
tokio = { version = "1", features = ["full"], optional = true }
hyper = { version = "1", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
mock-server = ["tokio", "hyper", "hyper-util", "http-body-util"]
kimi-bridge = ["tokio", "hyper", "hyper-util", "http-body-util", "reqwest", "futures-util"]
mureka = ["kimi-bridge"]  # Mureka AI music generation (requires MUREKA_API_KEY)
