[package]
name = "component-zoo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Component showcase for makepad-component"

[dependencies]
makepad-component = { workspace = true }
makepad-widgets = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
